--- a/flaskblog/templates/layout.html
+++ b/flaskblog/templates/layout.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -11,16 +12,16 @@
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
 
     {% if title %}
-        <title>Flask Blog - {{ title }}</title>
+        <title>Open Blog - {{ title }}</title>
     {% else %}
-        <title>Flask Blog</title>
+        <title>Open Blog</title>
     {% endif %}
 </head>
 <body>
     <header class="site-header">
       <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
         <div class="container">
-          <a class="navbar-brand mr-4" href="/">Flask Blog</a>
+          <a class="navbar-brand mr-4" href="/">OpenBlog</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -32,12 +33,21 @@
             <!-- Navbar Right Side -->
             <div class="navbar-nav">
               {% if current_user.is_authenticated %}
+                <a class="nav-item nav-link" href="{{ url_for('new_post') }}">New Post</a>
                 <a class="nav-item nav-link" href="{{ url_for('account') }}">Account</a>
                 <a class="nav-item nav-link" href="{{ url_for('logout') }}">Logout</a>
               {% else %}
                 <a class="nav-item nav-link" href="{{ url_for('login') }}">Login</a>
                 <a class="nav-item nav-link" href="{{ url_for('register') }}">Register</a>
               {% endif %}
+              <!-- Search form -->
+              <form class="form-inline ml-auto" method="GET" action="">
+                <div class="md-form my-0">
+                  <input class="form-control" type="text" placeholder="Search" aria-label="Search">
+                </div>
+                <button href="{{url_for('search', posts=posts)}}" class="btn btn-outline-white btn-md my-0 ml-sm-2" type="submit">Search</button>
+              </form>
+          
             </div>
           </div>
         </div>
