--- a/flaskblog/templates/layout.html
+++ b/flaskblog/templates/layout.html
@@ -41,11 +41,11 @@
                 <a class="nav-item nav-link" href="{{ url_for('register') }}">Register</a>
               {% endif %}
               <!-- Search form -->
-              <form class="form-inline ml-auto" method="GET" action="">
+              <form class="form-inline ml-auto" method="GET" action="{{url_for('search')}}">
                 <div class="md-form my-0">
-                  <input class="form-control" type="text" placeholder="Search" aria-label="Search">
+                  <input class="form-control" type="text" placeholder="Search" aria-label="Search" name="q">
                 </div>
-                <button href="{{url_for('search', posts=posts)}}" class="btn btn-outline-white btn-md my-0 ml-sm-2" type="submit">Search</button>
+                <button class="btn btn-outline-white btn-md my-0 ml-sm-2" type="submit">Search</button>
               </form>
           
             </div>
